--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - dev
+  workflow_dispatch:
 env:
   MONGO_DB_NAME: gha-demo
 jobs:
@@ -13,7 +14,7 @@ jobs:
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
-    environment: testingEnvironments
+    environment: testing
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
